lhk/ep08-ingress/ingress-ssl/ingress-api-todo.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api-todo
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - api.lahorakubernetes.cf
      secretName: api.lahorakubernetes.cf
  rules:
  - host: api.lahorakubernetes.cf
    http:
      paths:
      - path: /api/v1/todo
        backend:
          serviceName: api-todo
          servicePort: 80
