lhk/ep08-ingress/ingress-ssl/ingress-website.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: website
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - lahorakubernetes.cf
      secretName: lahorakubernetes.cf
  rules:
  - host: lahorakubernetes.cf
    http:
      paths:
      - path: /
        backend:
          serviceName: website
          servicePort: 80
